--- a/package.json
+++ b/package.json
@@ -1,39 +1,44 @@
 {
-  "name": "ng-easy",
-  "version": "0.0.1",
-  "description": "An library to make angular apps smaller to code.",
-  "main": "src/ng-easy.module.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tiagovdberg/ng-easy.git"
-  },
-  "keywords": [
-    "angular",
-    "ng",
-    "library",
-    "javascript",
-    "js",
-    "ng"
-  ],
-  "author": "Tiago van den Berg",
-  "license": "LGPL-3.0",
-  "bugs": {
-    "url": "https://github.com/tiagovdberg/ng-easy/issues"
-  },
-  "homepage": "https://github.com/tiagovdberg/ng-easy#readme",
-  "devDependencies": {
-    "bower": "^1.8.0",
-    "fs": "0.0.1-security",
-    "gulp": "^3.9.1",
-    "gulp-bump": "^2.5.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-git": "^1.12.0",
-    "gulp-jshint": "^2.0.4",
-    "gulp-tag-version": "^1.3.0",
-    "gulp-uglify": "^2.0.0",
-    "jshint": "^2.9.4"
-  }
+	"name": "ng-easy",
+	"version": "0.0.2-0",
+	"description": "An library to make angular apps smaller to code.",
+	"main": "src/ng-easy.module.js",
+	"files": [
+		"src/",
+		"dist/"
+	],
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/tiagovdberg/ng-easy.git"
+	},
+	"keywords": [
+		"angular",
+		"ng",
+		"library",
+		"javascript",
+		"js",
+		"ng"
+	],
+	"author": "Tiago van den Berg",
+	"license": "LGPL-3.0",
+	"bugs": {
+		"url": "https://github.com/tiagovdberg/ng-easy/issues"
+	},
+	"homepage": "https://github.com/tiagovdberg/ng-easy#readme",
+	"devDependencies": {
+		"bower": "^1.8.0",
+		"fs": "0.0.1-security",
+		"gulp": "^3.9.1",
+		"gulp-bump": "^2.5.1",
+		"gulp-concat": "^2.6.1",
+		"gulp-git": "^1.12.0",
+		"gulp-jshint": "^2.0.4",
+		"gulp-rename": "^1.2.2",
+		"gulp-tag-version": "^1.3.0",
+		"gulp-uglify": "^2.0.0",
+		"jshint": "^2.9.4"
+	}
 }
