--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
 	"name": "ng-easy",
-	"version": "0.0.2-4",
+	"version": "0.1.0",
 	"description": "An library to make angular apps smaller to code.",
 	"main": "src/ng-easy.module.js",
 	"authors": [
