--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-easy",
-  "version": "0.0.3-2",
+  "version": "0.0.5",
   "description": "An library to make angular apps smaller to code.",
   "main": "src/ng-easy.module.js",
   "files": [
@@ -31,10 +31,13 @@
   "devDependencies": {
     "bower": "^1.8.0",
     "gulp": "^3.9.1",
+    "gulp-bump": "^2.5.1",
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.0.4",
     "gulp-rename": "^1.2.2",
+    "gulp-tag-version": "^1.3.0",
     "gulp-uglify": "^2.0.0",
-    "jshint": "^2.9.4"
+    "jshint": "^2.9.4",
+    "yargs": "^6.5.0"
   }
 }
