--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-easy",
-  "version": "0.2.1",
+  "version": "0.3",
   "description": "An library to make angular apps smaller to code.",
   "main": "src/ng-easy.module.js",
   "files": [
@@ -10,10 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tiagovdberg/ng-easy.git"
-  },
+  "repository": "git+https://github.com/tiagovdberg/ng-easy.git",
   "keywords": [
     "angular",
     "ng",
@@ -29,15 +26,18 @@
   },
   "homepage": "https://github.com/tiagovdberg/ng-easy#readme",
   "devDependencies": {
-    "bower": "^1.8.0",
     "gulp": "^3.9.1",
-    "gulp-bump": "^2.5.1",
+    "gulp-bump": "^2.7.0",
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-tag-version": "^1.3.0",
-    "gulp-uglify": "^2.0.0",
-    "jshint": "^2.9.4",
+    "gulp-uglify": "^3.0.0",
+    "jshint": "^2.9.5",
     "yargs": "^6.5.0"
+  },
+  "dependencies": {
+    "angular": "^1.6.6",
+    "angular-route": "^1.6.6"
   }
 }
