--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "gulp-jshint": "^2.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-tag-version": "^1.3.0",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglify-es": "^1.0.4",
     "jshint": "^2.9.5",
     "yargs": "^6.5.0"
   },
