--- a/package.json
+++ b/package.json
@@ -27,17 +27,14 @@
   "homepage": "https://github.com/tiagovdberg/ng-easy#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-bump": "^2.7.0",
     "gulp-concat": "^2.6.1",
-    "gulp-jshint": "^2.0.4",
-    "gulp-rename": "^1.2.2",
-    "gulp-tag-version": "^1.3.0",
+    "gulp-jshint": "^2.1.0",
+    "gulp-rename": "^1.4.0",
     "gulp-uglify-es": "^1.0.4",
-    "jshint": "^2.9.5",
-    "yargs": "^6.5.0"
+    "jshint": "^2.10.2"
   },
   "dependencies": {
-    "angular": "^1.6.6",
-    "angular-route": "^1.6.6"
+    "angular": "^1.7.8",
+    "angular-route": "^1.7.8"
   }
 }
